# duckdb-extension-httpclient

./: CMakeLists.txt
.github/workflows/: MainDistributionPipeline.yml
docs/: README.md
src/: http_client_extension.cpp
test/sql/: httpclient.test
